Corregits problemes de transposició de les matrius de dades al llegir-les. Script que funciona bé per dades amb i sense anotacions.

--- a/integrative_analysis_mixomics/report.Rmd
+++ b/integrative_analysis_mixomics/report.Rmd
@@ -47,8 +47,8 @@ p <- heatmaply(gene_data,
         main = "",
         scale = "column",
         margins = c(60,100,40,20),
-        grid_color = "grey",
-        grid_width = 0.00001,
+        grid_color = "white",
+        grid_width = 0.0000001,
         titleX = FALSE,
         hide_colorbar = TRUE,
         branches_lwd = 0.1,
@@ -87,8 +87,8 @@ p <- heatmaply(gene_sc,
         main = "",
         scale = "column",
         margins = c(60,100,40,20),
-        grid_color = "grey",
-        grid_width = 0.00001,
+        grid_color = "white",
+        grid_width = 0.0000001,
         titleX = FALSE,
         hide_colorbar = TRUE,
         branches_lwd = 0.1,
