versió que admet 2 data sets d'input per a l'annotació

--- a/annotate_and_expand/report.Rmd
+++ b/annotate_and_expand/report.Rmd
@@ -24,23 +24,30 @@ options(width = 110)
 
 ### Raw data (before data prep) 
 
-Data loaded from file **`r p.inFile`**
+Data loaded from files **`r p.inFile1`** and **`r p.inFile2`**
 
 Samples in rows; Features in columns 
 
 ```{r out.width = '95%', echo=FALSE}
-show(tar_read(in_data))
+show(tar_read(in_data1))
+show(tar_read(in_data2))
 ```
 
 ### Data frame (before annotation) 
 
-Features in ROWS: **`r nrow(tar_read(dframe))`**
+Input from **`r p.inFile1`**:
+Features in ROWS: **`r nrow(tar_read(dframe1))`**
+Samples in COLUMNS: **`r ncol(tar_read(dframe1))`**
 
-Samples in COLUMNS: **`r ncol(tar_read(dframe))`**
+Input from **`r p.inFile2`**:
+Features in ROWS: **`r nrow(tar_read(dframe2))`**
+Samples in COLUMNS: **`r ncol(tar_read(dframe2))`**
+
 
 (Showing only partial output)
 ```{r out.width = '95%'}
-tar_read(dframe)[1:10,1:10]
+tar_read(dframe1)[1:10,1:10]
+tar_read(dframe2)[1:10,1:10]
 ```
 
 ### Heatmap (before annotation)
@@ -55,8 +62,8 @@ Features in ROWS; Samples in COLUMNS
 <!-- ``` -->
 
 #### Heatmaply
-```{r Heatmap.Pre, out.width = '95%'}
-p <- heatmaply(data.matrix(dframe), 
+```{r Heatmap.Pre1, out.width = '95%'}
+p <- heatmaply(data.matrix(dframe1), 
         #dendrogram = "row",
         xlab = "", ylab = "", 
         main = "",
@@ -69,8 +76,32 @@ p <- heatmaply(data.matrix(dframe),
         branches_lwd = 0.1,
         label_names = c("Feature", "Sample", "Value"),
         fontsize_row = 5, fontsize_col = 5,
-        labCol = colnames(data.matrix(dframe)),
-        labRow = rownames(data.matrix(dframe)),
+        labCol = colnames(data.matrix(dframe1)),
+        labRow = rownames(data.matrix(dframe1)),
+        heatmap_layers = theme(axis.line=element_blank())
+        )
+p
+# save the widget
+# library(htmlwidgets)
+# saveWidget(p, file= "~/.../heatmap.html")
+```
+
+```{r Heatmap.Pre2, out.width = '95%'}
+p <- heatmaply(data.matrix(dframe2), 
+        #dendrogram = "row",
+        xlab = "", ylab = "", 
+        main = "",
+        scale = "none",
+        margins = c(60,100,40,20),
+        #grid_color = "white",
+        #grid_width = 0,
+        titleX = FALSE,
+        hide_colorbar = FALSE,
+        branches_lwd = 0.1,
+        label_names = c("Feature", "Sample", "Value"),
+        fontsize_row = 5, fontsize_col = 5,
+        labCol = colnames(data.matrix(dframe2)),
+        labRow = rownames(data.matrix(dframe2)),
         heatmap_layers = theme(axis.line=element_blank())
         )
 p
@@ -85,23 +116,28 @@ Gene Ontology used: **`r p.GO.onto`**
 
 Min. number of genes required to pass the filter: **`r p.GO.miN`**
 
-Annotated categories: **`r ncol(tar_read(categ_matrix))`**
+Annotated categories: **`r ncol(tar_read(categ_matrix1))`**
+Annotated categories: **`r ncol(tar_read(categ_matrix2))`**
 
 ```{r out.width = '95%'}
-tar_read(categ_sums)
+tar_read(categ_sums1)
+tar_read(categ_sums2)
 ```
 
-Features in ROWS: **`r nrow(tar_read(annot_matrix))`**
+Features in ROWS: **`r nrow(tar_read(annot_matrix1))`**
+Features in ROWS: **`r nrow(tar_read(annot_matrix2))`**
 
-Samples+Categs in COLUMNS: **`r ncol(tar_read(annot_matrix))`**
+Samples+Categs in COLUMNS: **`r ncol(tar_read(annot_matrix1))`**
+Samples+Categs in COLUMNS: **`r ncol(tar_read(annot_matrix2))`**
 
 (Showing only partial output)
 ```{r out.width = '95%'}
-head(tar_read(annot_matrix))
+head(tar_read(annot_matrix1))
+head(tar_read(annot_matrix2))
 ```
 
-```{r Heatmap.Categs, out.width = '95%', eval = FALSE}
-p <- heatmaply(categ_matrix, 
+```{r Heatmap.Categs1, out.width = '95%', eval = FALSE}
+p <- heatmaply(categ_matrix1, 
         dendrogram = "none",
         xlab = "", ylab = "", 
         main = "",
@@ -114,8 +150,32 @@ p <- heatmaply(categ_matrix,
         branches_lwd = 0.1,
         label_names = c("Feature", "Sample", "Value"),
         fontsize_row = 5, fontsize_col = 5,
-        labCol = colnames(categ_matrix),
-        labRow = rownames(categ_matrix),
+        labCol = colnames(categ_matrix1),
+        labRow = rownames(categ_matrix1),
+        heatmap_layers = theme(axis.line=element_blank())
+        )
+p
+# save the widget
+# library(htmlwidgets)
+# saveWidget(p, file= "~/.../heatmap.html")
+```
+
+```{r Heatmap.Categs2, out.width = '95%', eval = FALSE}
+p <- heatmaply(categ_matrix2, 
+        dendrogram = "none",
+        xlab = "", ylab = "", 
+        main = "",
+        scale = "none",
+        margins = c(60,100,40,20),
+        #grid_color = "white",
+        #grid_width = 0,
+        titleX = FALSE,
+        hide_colorbar = FALSE,
+        branches_lwd = 0.1,
+        label_names = c("Feature", "Sample", "Value"),
+        fontsize_row = 5, fontsize_col = 5,
+        labCol = colnames(categ_matrix2),
+        labRow = rownames(categ_matrix2),
         heatmap_layers = theme(axis.line=element_blank())
         )
 p
@@ -125,30 +185,33 @@ p
 ```
 
 
-
 ### Expanded Matrix
 
 Gene Ontology used: **`r p.GO.onto`**
 
 Min. number of genes applied to filter: **`r p.GO.miN`**
 
-Annotated categories: **`r ncol(tar_read(categ_matrix))`**
+Annotated categories: **`r ncol(tar_read(categ_matrix1))`**
+Annotated categories: **`r ncol(tar_read(categ_matrix2))`**
 
-Features+Categs in ROWS: **`r nrow(tar_read(expd_matrix))`**
+Features+Categs in ROWS: **`r nrow(tar_read(expd_matrix1))`**
+Features+Categs in ROWS: **`r nrow(tar_read(expd_matrix2))`**
 
-Samples in COLUMNS: **`r ncol(tar_read(expd_matrix))`**
+Samples in COLUMNS: **`r ncol(tar_read(expd_matrix1))`**
+Samples in COLUMNS: **`r ncol(tar_read(expd_matrix2))`**
 
 (Showing only partial output)
 ```{r out.width = '95%'}
-tail(tar_read(expd_matrix), ncol(categ_matrix))[,1:10]
+tail(tar_read(expd_matrix1), ncol(categ_matrix1))[,1:10]
+tail(tar_read(expd_matrix2), ncol(categ_matrix2))[,1:10]
 ```
 
 ### Heatmap (after row expansion) 
 
 Features+Categs in ROWS; Samples in COLUMNS
 
-```{r Heatmap.Post, out.width = '95%'}
-p <- heatmaply(expd_matrix, 
+```{r Heatmap.Post1, out.width = '95%'}
+p <- heatmaply(expd_matrix1, 
         #dendrogram = "row",
         xlab = "", ylab = "", 
         main = "",
@@ -161,8 +224,32 @@ p <- heatmaply(expd_matrix,
         branches_lwd = 0.1,
         label_names = c("Feature", "Sample", "Value"),
         fontsize_row = 5, fontsize_col = 5,
-        labCol = colnames(expd_matrix),
-        labRow = rownames(expd_matrix),
+        labCol = colnames(expd_matrix1),
+        labRow = rownames(expd_matrix1),
+        heatmap_layers = theme(axis.line=element_blank())
+        )
+p
+# save the widget
+# library(htmlwidgets)
+# saveWidget(p, file= "~/.../heatmap.html")
+```
+
+```{r Heatmap.Post2, out.width = '95%'}
+p <- heatmaply(expd_matrix2, 
+        #dendrogram = "row",
+        xlab = "", ylab = "", 
+        main = "",
+        scale = "none",
+        margins = c(60,100,40,20),
+        #grid_color = "white",
+        #grid_width = 0,
+        titleX = FALSE,
+        hide_colorbar = FALSE,
+        branches_lwd = 0.1,
+        label_names = c("Feature", "Sample", "Value"),
+        fontsize_row = 5, fontsize_col = 5,
+        labCol = colnames(expd_matrix2),
+        labRow = rownames(expd_matrix2),
         heatmap_layers = theme(axis.line=element_blank())
         )
 p
